<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_darker1"
    android:orientation="vertical"
    tools:context=".view.NewItemActivity">

    <TextView
        android:id="@+id/headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/edit_item_headline"
        android:textAlignment="center"
        android:textColor="@color/light_gray_text"
        android:textSize="16sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.31">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/labelCode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:text="@string/label_code"
                    android:textAlignment="textEnd"
                    android:textColor="@color/light_gray_text" />

                <EditText
                    android:id="@+id/editTextItemCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="3"
                    android:autofillHints=""
                    android:hint="@string/enter_item_code"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColor="@color/light_gray_text"
                    android:textColorHint="@color/light_gray_text" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layoutDirection="rtl">

                <Button
                    android:id="@+id/buttonScanCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    android:background="@color/noColor"
                    android:backgroundTint="@color/blue_darker2"
                    android:text="@string/scan_code"
                    android:textColor="@color/light_gray_text"
                    android:textSize="15sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/labelDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:text="@string/label_description"
                    android:textAlignment="textEnd"
                    android:textColor="@color/light_gray_text" />

                <EditText
                    android:importantForAutofill="no"
                    android:id="@+id/editTextItemDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/selected_item_description"
                    android:maxWidth="100dp"
                    android:maxLines="5"
                    android:minHeight="48dp"
                    android:textColor="@color/light_gray_text"
                    android:textColorHint="@color/light_gray_text"
                    android:textSize="18sp"
                    android:gravity="center_vertical"
                    android:inputType="textMultiLine"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/labelBorrowings"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:text="@string/label_borrowings"
                    android:textAlignment="textEnd"
                    android:textColor="@color/light_gray_text" />

                <EditText
                    android:importantForAutofill="no"
                    android:id="@+id/editTextBorrowings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:hint="@string/actual_number_of_borrowings"
                    android:inputType="number"
                    android:maxWidth="100dp"
                    android:maxLines="5"
                    android:minHeight="48dp"
                    android:textColor="@color/light_gray_text"
                    android:textColorHint="@color/light_gray_text"
                    android:textSize="18sp" />
            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/buttonOK"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="@color/noColor"
            android:backgroundTint="@color/green_affirmative"
            android:text="@string/accept_changes"
            android:textColor="@color/light_gray_text"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout"
            app:layout_constraintVertical_bias="0.501" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>