<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_darker1"
    tools:context=".view.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topPart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:shadowColor="#6B000000"
            android:text="@string/nazev_aplikace"
            android:textColor="@color/light_gray_text"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/settingsButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/settingsButton" />

        <ImageButton
            android:id="@+id/settingsButton"
            android:layout_width="70dp"
            android:layout_height="48dp"
            android:background="@color/noColor"
            android:contentDescription="@string/settings"
            android:padding="12dp"
            android:rotationX="0"
            android:scaleType="centerInside"
            android:scaleX="1"
            android:scaleY="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ico_three_dots" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/settings"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topPart"
        app:srcCompat="@drawable/warehouse" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/blue_darker1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/radioButtonBorrow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/borrow"
                android:textColor="@color/light_gray_text" />

            <RadioButton
                android:id="@+id/radioButtonReturn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_return"
                android:textColor="@color/light_gray_text" />
        </RadioGroup>

        <Button
            android:id="@+id/buttonScan"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/blue_darker2"
            android:backgroundTintMode="add"
            android:text="@string/scan_now"
            android:textColor="@color/light_gray_text"
            android:textSize="30sp"
            app:backgroundTint="@color/blue_darker2" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>